sql/sql_table.cc
@@ -6387,8 +6387,9 @@ static bool fill_alter_inplace_info(THD *thd,
     /* Check that key comment is not changed. */
     if (table_key->comment.length != new_key->comment.length ||
         (table_key->comment.length &&
-         strcmp(table_key->comment.str, new_key->comment.str) != 0))
-        goto index_changed;
+         memcmp(table_key->comment.str, new_key->comment.str,
+                table_key->comment.length) != 0))
+      goto index_changed;
 
     continue;
 
